# sqlgate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SKILL.md  docker-compose.yaml
db/: schema.sql
docker/: init-target-my.sql  init-target-pg.sql
src/: main.rs  static_files.rs  templates.rs
src/auth/: cf_access.rs  mod.rs
src/db/: approvals.rs  audit.rs  executions.rs  mod.rs  previews.rs  requests.rs
src/execute/: engine.rs  hash.rs  mod.rs
src/http/: request.rs  response.rs  router.rs
src/preview/: engine.rs  mod.rs  validator.rs  wrapper.rs
src/targets/: mod.rs  postgres_target.rs
static/: tailwind.css  tailwind.input.css
