[package]
name = "sqlgate"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-serde_json-1"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
